[package]
name = "rrk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.25.0", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
